--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    background-image: url("/bg.png");
+    background-image: url("/bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
