--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@ body {
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @font-face {
     font-family: "MagicSchoolOne";
     src: url("/fonts/MagicSchoolOne.ttf") format("truetype");
